# dnscap

./: .gitignore  .gitmodules  .lgtm.yml  .travis.yml  CBOR_DNS_STREAM.md  CHANGES  CONTRIBUTORS  Dockerfile.mayhem  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.manual  Mayhemfile  README  README.hpux  README.linux  README.md  autogen.sh  build_hardened.sh  config.h.in  configure  configure.ac  configure.in  dnscap.1  dnscap.c  dnscap_common.h  dump_dns.c  dump_dns.h  fmt.sh  mk-release.sh  sonar-project.properties.local
.copr/: Makefile
.github/workflows/: codeql.yml  mayhem.yml
contrib/: cdsdump.py  cdsidxchk.py
debian/: changelog  control  copyright  dirs  dnscap-dev.install  dnscap-plugin-pcapdump.install  dnscap-plugin-rssm.install  dnscap-plugin-template.install  dnscap-plugin-txtout.install  dnscap.install  dnscap.manpages  docs  gbp.conf  rules
debian/patches/: fixup-makefile.patch  series
isc/: list.h
m4/: dl.sh
mayhem/: Dockerfile  Mayhemfile_rssm_save_counts  fuzz_rssm_save_counts.cpp
plugins/: Makefile.am
plugins/anonaes128/: Makefile.am  anonaes128.c  test1.gold  test1.sh  test2.gold  test2.sh  test3.gold  test3.sh  test4.sh
plugins/anonmask/: Makefile.am  anonmask.c  test1.gold  test1.sh  test2.gold  test2.sh  test3.sh
plugins/anonzero/: Makefile.am  anonzero.c
plugins/asudp/: Makefile.am  asudp.c  test1.gold  test1.sh
plugins/cryptopan/: Makefile.am  cryptopan.c  test1.gold  test1.sh  test2.gold  test2.sh  test3.gold  test3.sh  test4.sh
plugins/cryptopant/: Makefile.am  cryptopant.c  keyfile  test1.gold  test1.sh  test2.gold  test2.sh  test3.gold  test3.sh  test4.sh
plugins/eventlog/: Makefile.am  eventlog.c  test1.sh
plugins/ipcrypt/: Makefile.am  ipcrypt.c  test1.gold  test1.sh  test2.gold  test2.sh  test3.sh  test4.sh
plugins/pcapdump/: Makefile  Makefile.am  pcapdump.c  test1.sh
plugins/royparse/: Makefile.am  royparse.c  test1.sh
plugins/rssm/: .gitignore  Makefile  Makefile.am  README.md  dnscap-rssm-rssac002  dnscap-rssm-rssac002.1.in  hashtbl.c  hashtbl.h  rssm.c  test1.gold  test1.sh  test2.gold  test2.sh  test3.gold  test3.sh  test4.sh  test5.gold  test5.sh
plugins/rzkeychange/: Makefile.am  hashtbl.c  hashtbl.h  rzkeychange.c  test1.sh
plugins/shared/: edns0_ecs.c
plugins/template/: Makefile  Makefile.am  template.c  test1.sh
plugins/txtout/: Makefile  Makefile.am  test1.sh  txtout.c
rpm/: dnscap.spec  spec
src/: Makefile.am  args.c  args.h  assert.c  bpft.c  bpft.h  config.h.in  daemon.c  daemon.h  dnscap.1.in  dnscap.c  dnscap.h  dnscap_common.h  dump_cbor.c  dump_cbor.h  dump_cds.c  dump_cds.h  dump_dns.c  dump_dns.h  dumper.c  dumper.h  endian_compat.h  endpoint.c  endpoint.h  hashtbl.c  hashtbl.h  iaddr.c  iaddr.h  log.c  log.h  memzero.c  memzero.h  network.c  network.h  options.c  options.h  pcaps.c  pcaps.h  sig.c  sig.h  (+4 more)
src/ext/: lookup3.c
src/test/: .gitignore  1qtcpnosyn.pcap  1qtcppadd.pcap  Makefile.am  dns.gold  dns.gold2  dns.pcap.lz4  dns.pcap.xz  dns.pcap.zst  dnso1tcp-bighole.pcap  dnso1tcp-midmiss.pcap  dnso1tcp.pcap  dnsotcp-many1pkt.pcap  dnsotcp-manyopkts.pcap  dnspad.gold  dnspad.pcap  do1t-nosyn-1nolen.pcap  edns.gold  edns.pcap  ether_padd.gold  ether_padd.pcap  frags.gold  frags.pcap  gen_icmp.py  icmp.gold  icmp.pcap  ipv6-with-ethernet-padding.pcap  sll2.gold  sll2.pcap  test1.sh  test10.gold  test10.sh  test11.sh  test12.sh  test13.sh  test14.gold  test14.sh  test2.sh  test3.sh  test4.sh  (+17 more)
