#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.64])
AC_INIT([dnscap],
	m4_esyscmd([svn info | awk '/^Revision:/ {print "r" $2}' | tr -d '\n']),
	[wessels@dns-oarc.net],
	[],
	[http://dnscap.dns-oarc.net/])
AC_CONFIG_SRCDIR([dnscap.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR(cfgaux)

# Checks for programs.
AC_PROG_CC
AC_CANONICAL_HOST

# Checks for libraries.
AC_CHECK_LIB([bind], [ns_initparse], [], [AC_CHECK_LIB([bind], [__ns_initparse])])
AC_CHECK_LIB([resolv], [res_mkquery], [], [AC_CHECK_LIB([resolv], [__res_mkquery])])
AC_CHECK_LIB([pcap], [pcap_open_live], [],
	[
	echo "dnscap requires libpcap.  Install package libpcap-dev on most Linux"
	echo "systems.  You can also get the source from www.tcpdump.org."
	exit 1
	])


# HPUX
case "$host_os" in
hpux*)
	AC_CHECK_LIB([hplx], [main])
	;;
esac

# Solaris
case "$host_os" in
solaris*)
	AC_CHECK_LIB([rt], [main])
	AC_CHECK_LIB([md5], [main])
	AC_CHECK_LIB([socket], [main])
	AC_CHECK_LIB([nsl], [main])
	;;
esac

# Checks for header files.
AC_HEADER_RESOLV
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdlib.h string.h sys/ioctl.h sys/param.h sys/socket.h sys/time.h unistd.h])

# Checks for library functions.
AC_CHECK_FUNCS([snprintf])
AC_CHECK_FUNC([ns_initparse],
	[AC_DEFINE([HAVE_NS_INITPARSE], [1], [Define to 1 if you have the `ns_initparse' function.])],
	AC_CHECK_FUNC(__ns_initparse,
		[AC_DEFINE([HAVE_NS_INITPARSE], [1], [Define to 1 if you have the `ns_initparse' function.])]
	)
)
AC_CHECK_FUNC([ns_parserr],
	[AC_DEFINE([HAVE_NS_PARSERR], [1], [Define to 1 if you have the `ns_parserr' function.])],
	AC_CHECK_FUNC(__ns_parserr,
		[AC_DEFINE([HAVE_NS_PARSERR], [1], [Define to 1 if you have the `ns_parserr' function.])]
	)
)
AC_CHECK_FUNC([ns_sprintrr],
	[AC_DEFINE([HAVE_NS_SPRINTRR], [1], [Define to 1 if you have the `ns_sprintrr' function.])],
	AC_CHECK_FUNC(__ns_sprintrr,
		[AC_DEFINE([HAVE_NS_SPRINTRR], [1], [Define to 1 if you have the `ns_sprintrr' function.])]
	)
)
AC_CHECK_FUNCS([__assertion_failed])

if test "$GCC" = "yes" ; then
	CWARN="-Wall"
fi

OPTFLAGS=''
AC_SUBST(OPTFLAGS, ["$OPTFLAGS"])
AC_SUBST(CWARN, ["$CWARN"])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
